--- a/manifest.ini
+++ b/manifest.ini
@@ -1,7 +1,7 @@
 name = "talkingMetaTrader"
 summary = "Talking Meta Trader 5"
 description = "Allows to navigate in Meta Trader 5 using hot keys. This addon comes with a standalone application called ChartReader.ChartReader can read chart data from MetaTrader and convert it into an HTML table or represent it as sound tones, helping blind users understand trends, levels, and figures."
-author = "Vladimir Suhhorukov <vladimirsuhorukov@gmail.com>"
+author = "Vladimir Suhhorukov <vladimirsuhorukov@gmail.com>, Svetlana Suhhorukova <svetlana@angeliberta.com>"
 url = "https://github.com/Angeliberta-Software/TMT"
 version = "1.0.0"
 docFileName = "readme.html"
